examples/test/testpolicy10378.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10378
  namespace: namespace100
spec:
  podSelector:
    matchLabels:
      key37: value41
      key0: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value45
          key24: value35
      podSelector:
        matchLabels:
          key25: value33
